# cognee-community

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/actions/cognee_setup/: action.yml
.github/workflows/: disable_independent_workflows.sh  test_opensearch.yml
experimental/: README.md
experimental/assistant_dlt_docs/: build_dlt_assistant_with_cognee.py  clean_docs_dlt.py  docs_dlt_some_pages.md  docs_dlt_specific_pages.md  docs_dlt_specific_pages_updated.md  extra_docs.md  extract_specific_pages.py  requirements.txt  scrape_docs.py  scrape_specific_urls.py
experimental/faq_assistant_qdrant_docs/: clean_docs_qdrant.py  clean_docs_quadrant.py  faq_assistant_with_cognee.py  query.py  requirements.txt  scrape_docs.py
