[project]
name = "cognee-community"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cognee>=0.1.40",
]

[tool.uv.sources]
cognee = { path = "../cognee" }

[tool.uv.workspace]
members = [
    "packages/vector/qdrant",
]
