[project]
name = "cognee-community"
version = "0.1.0"
description = "cognee community package for partner integrations"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "cognee>=0.1.41",
]

[tool.poetry]
package-mode = false

[tool.uv.sources]
cognee = { path = "../cognee" }

[tool.uv.workspace]
members = [
    "packages/vector/qdrant",
    "packages/vector/azureaisearch"
]
